[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]

logger = { git = "https://github.com/stevenleadbeater/logger.git" }
actix = "0.13.0"
actix-codec = "0.5.1"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix-files = "0.6.2"
actix-rt = "2.8.0"
futures = { version = "0.3.5", features = ["alloc"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.18.5"
